--- a/v02/peNoChao/public/stylesheets/style.css
+++ b/v02/peNoChao/public/stylesheets/style.css
@@ -126,6 +126,15 @@ button:focus{
 .comentario-form:focus{
     box-shadow: none;
 }
+.titulo-sem-post{
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 700;
+    text-align: center;
+    font-size: 200%;
+}
+#cartao{
+    width: 20%;
+}
 .titulo-header-card{
     margin: 0px;
     font-size: 100%;
