--- a/v02/peNoChao/views/atletaFeed.ejs
+++ b/v02/peNoChao/views/atletaFeed.ejs
@@ -69,7 +69,7 @@
           <div class="d-flex justify-content-center p-0">
             <% let extensao = publication.path.includes('.mp4'); %>
             <% if(extensao) {%>   
-              <video controls="" class="col-12">
+              <video controls="" class="col-12   video-post">
   
                 <source src="/images/midias/<%=publication.path%>" type="video/mp4">
                 Seu navegador não suporta o elemento <code>video</code>.
